# stats-dash

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: beer.min.css  beer.min.js  material-dynamic-colors.min.js  pico.classless.min.css
assets/pico-1.5.9/css/: pico.classless.min.css  pico.min.css
public/pico-1.5.9/css/: pico.min.css
src/: app.rs  cards.rs  con_code.rs  lib.rs  main.rs  table.rs  top_bar.rs  utils.rs
src/components/: assets.rs  cards.rs  head.rs  table.rs  top_bar.rs
src/pages/: browse.rs  stats.rs
